# data-engineer-at-magenta

./: .gitignore  Makefile  README.md  pyproject.toml  workspace.yaml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: questions.md
docs/: dwh_track.md  platform_track.md
notebooks/: explore.ipynb
src/code_location_de/: pyproject.toml
src/code_location_de/code_location_de/: __init__.py
src/code_location_de/code_location_de/assets/: __init__.py
src/code_location_de/code_location_de/assets/ingestion/: __init__.py  raw_data.py
src/code_location_de/code_location_de/assets/platform/: __init__.py  pipeline.py
src/code_location_de/code_location_de/checks/: __init__.py  raw_checks.py
src/code_location_de/code_location_de/resources/: __init__.py  api_client.py
src/code_location_de/code_location_de_tests/: test_ingestion.py  test_pipeline.py
src/code_location_de_dbt/: dbt_project.yml  profiles.yml
src/code_location_de_dbt/models/marts/: _marts.yml  dim_customers.sql  dim_products.sql  fct_orders.sql  rpt_sales_summary.sql
src/code_location_de_dbt/models/staging/: _sources.yml  _staging.yml  stg_orders.sql  stg_products.sql  stg_users.sql
